--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,15 +34,16 @@
             android:label="@string/app_name"/>
         <activity android:name=".VerificationActivity"
             android:label="Wellcome"/>
-        <activity android:name=".ResultActvitiy"
+        <activity android:name=".ResultActivity"
             android:label="QR code"/>
         <activity android:name=".LoginActivity"
             android:label="Login"/>
-        <activity android:name=".ScannerActiivity"
+        <activity android:name=".ScannerActivity"
             android:label="Scanner"/>
         <activity android:name=".BarcodeHistoryActivity"
             android:label="Scan History"/>
-        <activity android:name=".ScanActivity" />
+        <activity android:name=".ScanActivity"
+            android:label="Scanner"/>
     </application>
 
 </manifest>
